# dolbyafy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md
scripts/: bump_version.py  cut_release.sh
src/dolbyafy/: audio.py  cli.py  version.py
tests/: test_audio.py
