[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "dolbyafy"
version = "0.1.0"
description = "A 5.1 surround audio swirl tool for MP3s."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.scripts]
dolbyafy = "dolbyafy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dolbyafy"]
