[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "dolbyafy"
version = "0.1.0"
description = "A 5.1 surround audio swirl tool."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["audio", "surround", "dolby", "5.1", "ffmpeg"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "numpy>=1.24",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/tpn/dolbyafy"

[project.optional-dependencies]
dev = [
  "black>=24.10",
  "pre-commit>=3.8",
  "pytest>=7.4",
  "ruff>=0.6.9",
]

[project.scripts]
dolbyafy = "dolbyafy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dolbyafy"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 78
target-version = ["py310"]

[tool.ruff]
line-length = 78
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/dolbyafy/cli.py" = ["B008"]
